--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,11 @@
 [metadata]
-name = orquestra-python-template
-description = "Orquestra Python Template package"
+name = orquestra-core
+description = "Orquestra Core meta-package"
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8
-url = https://github.com/zapatacomputing/orquestra-python-template
+url = https://github.com/zapatacomputing/orquestra-core
 author = Zapata Computing Inc.
 author_email = info@zapatacomputing.com,
-license = <INSERT LICENSE APPROPRIATE LICENSE HERE>
-license_file = LICENSE
 classifiers =
     Programming Language :: Python :: 3
     Operating System :: OS Independent
