Add installation requirements to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,10 +22,11 @@ packages = find_namespace:
 python_requires = >=3.8,!=3.9.7,<3.11
 
 install_requires =
-    numpy>=1.20
-    scipy>=1.4.1
-    sympy>=1.5,<=1.9
-
+    orquestra-quantum
+    orquestra-opt
+    orquestra-vqa
+    orquestra-qiskit
+    orquestra-cirq
 
 [options.packages.find]
 where = src
