Pinned all library versions.

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,11 +22,12 @@ packages = find_namespace:
 python_requires = >=3.8,!=3.9.7,<3.11
 
 install_requires =
-    orquestra-quantum
-    orquestra-opt
-    orquestra-vqa
-    orquestra-qiskit
-    orquestra-cirq
+    orquestra-quantum==0.2.0
+    orquestra-opt==0.2.0
+    orquestra-vqa==0.2.0
+    orquestra-qiskit==0.2.0
+    orquestra-cirq==0.2.0
+    orquestra-forest==0.2.0
 
 [options.packages.find]
 where = src
