--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -50,5 +50,17 @@ jobs:
           repository: zapatacomputing/orquestra-qiskit
           path: orquestra-qiskit
 
+      - name: Get orquestra-forest
+        uses: actions/checkout@v2
+        with:
+          repository: zapatacomputing/orquestra-forest
+          path: orquestra-forest
+
+      - name: Get orquestra-qulacs
+        uses: actions/checkout@v2
+        with:
+          repository: zapatacomputing/orquestra-qulacs
+          path: orquestra-qulacs
+
       - name: Run publish release action
         uses: ./subtrees/z_quantum_actions/actions/publish-release
