--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -59,5 +59,18 @@ jobs:
           repository: zapatacomputing/orquestra-qiskit
           path: orquestra-qiskit
 
+      - name: Get orquestra-forest
+        uses: actions/checkout@v2
+        with:
+          repository: zapatacomputing/orquestra-forest
+          path: orquestra-forest
+
+      - name: Get orquestra-qulacs
+        uses: actions/checkout@v2
+        with:
+          repository: zapatacomputing/orquestra-qulacs
+          path: orquestra-qulacs
+
+
       # Installs project, checks codestyle
       - uses: ./subtrees/z_quantum_actions/actions/style
