--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -19,4 +19,4 @@ jobs:
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
           branch: gh-pages # The branch the action should deploy to.
-          folder: _build/html
+          folder: docs/_build/html
