--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,4 +5,4 @@ sphinxemoji
 Jinja2>=3.0.0
 protobuf==3.20.1
 
-git+ssh://git@github.com/zapatacomputing/orquestra-manifest.git
+git+https://git@github.com/zapatacomputing/orquestra-manifest.git
