--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -1,7 +1,5 @@
 on:
-  push:
-    # branches:
-    #   - "main"
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,6 +18,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
           branch: gh-pages # The branch the action should deploy to.
           folder: docs/_build/html
