Adding Docs files (#6)
* Adding VSCode files to gitignore

* Basic bell state test for use in docs

* First shot at first couple tutorials

* Translating circuits tutorial

* Basic sphinx docs site working

* A couple fixes

* Add How to Contribute doc

* Adding expectation value bit

Also switching from printing to icecream

* More standard Ising on the cake

* No need to have multiple shots

it's an exact expectation value

* Adding structure page

* Adding excalidraw embedding

* Adding basic QAOA tutorial

* Adding links between pages

* adding note admonitions

* Adding list of options page

* Adding interaction to qaoa tutorial

* Adding interaction to translating circuits

* Interactive bits for creating circuits

* Interactive bit for running circuits

* Putting all the very basic tutorials on one page

Good suggestion from @mstechly

* resized images

* Updating structure diagram

* Update docs about Core's structure.

* Building docs automatically

* specify some versions

* correct path

* Adding autoapi code

* gh actions build autoapi docs

* https for manifest

* cd first

* testing cd

* Revert "testing cd"

This reverts commit 7be8995f09e34701f1a81485e62d709c28da784a.

* use working directory

* no indent

* https over ssh

* Adding information on how to build docs

* No more ssh

Co-Authored-By: Max Radin <radin.max@gmail.com>

* push for now

Co-Authored-By: Max Radin <radin.max@gmail.com>

* Should only run when called

Will only happen on release

* Update docs/tutorials/basic_qaoa.rst

Co-authored-by: Michał Stęchły <michal.stechly@gmail.com>

* Update docs/tutorials/basic_qaoa.rst

Co-authored-by: Michał Stęchły <michal.stechly@gmail.com>

* Suggested Changes implemented

Suggestions from @mstechly 's review
- removing some unneeded comments
- putting imports near where they are used in the beginner bell_state tutorial
- making graph build

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,10 @@ dmypy.json
 
 # PyCharm files
 .idea
+
+# VSCode files
+.vscode/
+docs/tutorials/images/.DS_Store
+docs/repos/
+docs/api/
+docs/tmp_monorepo/
