--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,5 +5,6 @@ sphinx-design
 sphinxemoji
 Jinja2>=3.0.0
 protobuf==3.20.1
+Pygments==2.11.2
 
 git+https://git@github.com/zapatacomputing/orquestra-manifest.git
