Updated tests to work with new versions of libraries.

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,8 @@ where = src
 [options.extras_require]
 dev =
     orquestra-python-dev
+    orquestra-opt[cma]
+    orquestra-cirq[qsim]
 
 [flake8]
 ignore = E203,E266,F401,W605
