Update publish procedure
* Add missing deps to publish release script.

* Fix name of the workflow step.

* Fix Makefile for release.

* Remove unnecessary checkouts for publish release.

--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -19,13 +19,12 @@ jobs:
           # Fetch whole repo to get access to tags to read current package
           # version.
           fetch-depth: 0
-
-      - name: Install deps
+          
+      - name: Run tests using libs from PyPI
         shell: bash
         run: make run_tests_before_release
         env:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-
 
       - name: Run publish release action
         uses: ./subtrees/z_quantum_actions/actions/publish-release
