Added changelog generation

--- a/.gitignore
+++ b/.gitignore
@@ -133,8 +133,10 @@ dmypy.json
 
 # VSCode files
 .vscode/
+
 docs/tutorials/images/.DS_Store
 docs/repos/
 docs/api/
 docs/tmp_monorepo/
 docs/.DS_Store
+docs/changelogs
