--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,9 @@ dev =
     orquestra-python-dev
     orquestra-opt[cma]
     orquestra-cirq[qsim]
+    orquestra-qiskit==0.5.0
+    orquestra-qulacs==0.4.0
+    orquestra-cirq==0.5.0
 
 qulacs =
     orquestra-qulacs==0.4.0
@@ -45,8 +48,6 @@ qiskit =
 
 cirq =
     orquestra-cirq==0.5.0
-
-
 
 [flake8]
 ignore = E203,E266,F401,W605
