--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ dev =
     orquestra-qiskit==0.6.0
     orquestra-qulacs==0.5.0
     orquestra-cirq==0.6.0
+    orquestra-braket==0.2.0
 
 qulacs =
     orquestra-qulacs==0.5.0
@@ -48,6 +49,9 @@ qiskit =
 
 cirq =
     orquestra-cirq==0.6.0
+
+braket =
+    orquestra-braket==0.2.0
 
 [flake8]
 ignore = E203,E266,F401,W605
