--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -65,6 +65,11 @@ jobs:
           repository: zapatacomputing/orquestra-qulacs
           path: orquestra-qulacs
 
+      - name: Get orquestra-braket
+        uses: actions/checkout@v2
+        with:
+          repository: zapatacomputing/orquestra-braket
+          path: orquestra-braket
 
       # Installs project, checks codestyle
       - uses: ./subtrees/z_quantum_actions/actions/style
