--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ dev =
     orquestra-qulacs==0.5.0
     orquestra-cirq==0.6.0
     orquestra-braket==0.2.0
+    orquestra-forest==0.4.0
 
 qulacs =
     orquestra-qulacs==0.5.0
@@ -52,6 +53,9 @@ cirq =
 
 braket =
     orquestra-braket==0.2.0
+
+forest =
+    orquestra-forest==0.4.0
 
 [flake8]
 ignore = E203,E266,F401,W605
