fix: download orquestra-forest for example checks

--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -71,5 +71,11 @@ jobs:
           repository: zapatacomputing/orquestra-braket
           path: orquestra-braket
 
+      - name: Get orquestra-forest
+        uses: actions/checkout@v2
+        with:
+          repository: zapatacomputing/orquestra-forest
+          path: orquestra-forest
+
       # Installs project, checks codestyle
       - uses: ./subtrees/z_quantum_actions/actions/style
