--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ where = src
 [options.extras_require]
 dev =
     orquestra-python-dev
-    orquestra-opt[cma]
+    orquestra-opt[all]
     orquestra-cirq[qsim]
     orquestra-qiskit==0.6.0
     orquestra-qulacs==0.5.0
