fix: add IBMQ token to coverage and style

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -78,3 +78,7 @@ jobs:
           path: orquestra-forest
 
       - uses: ./subtrees/z_quantum_actions/actions/coverage
+
+      - uses: ./subtrees/z_quantum_actions/actions/coverage
+        env:
+          ZAPATA_IBMQ_API_TOKEN: ${{ secrets.ZAPATA_IBMQ_API_TOKEN }}
