--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,9 @@ packages = find_namespace:
 python_requires = >=3.8,!=3.9.7,<3.11
 
 install_requires =
-    orquestra-quantum==0.7.0
-    orquestra-opt==0.6.0
-    orquestra-vqa==0.7.0
+    orquestra-quantum==0.8.0
+    orquestra-opt==0.7.0
+    orquestra-vqa==0.8.0
 
 
 
@@ -36,19 +36,20 @@ dev =
     orquestra-python-dev
     orquestra-opt[all]
     orquestra-cirq[qsim]
-    orquestra-qiskit==0.7.0
-    orquestra-qulacs==0.6.0
-    orquestra-cirq==0.7.0
+    orquestra-qiskit==0.8.0
+    orquestra-qulacs==0.7.0
+    orquestra-cirq==0.8.0
     orquestra-braket==0.3.0
+    icecream
 
 qulacs =
-    orquestra-qulacs==0.6.0
+    orquestra-qulacs==0.7.0
 
 qiskit =
-    orquestra-qiskit==0.7.0
+    orquestra-qiskit==0.8.0
 
 cirq =
-    orquestra-cirq==0.7.0
+    orquestra-cirq==0.8.0
 
 braket =
     orquestra-braket==0.3.0
