--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ dev =
     orquestra-qulacs==0.7.0
     orquestra-cirq==0.8.0
     orquestra-braket==0.3.0
+    orqviz==0.3.0
     icecream
 
 qulacs =
@@ -56,6 +57,9 @@ braket =
 
 forest =
     orquestra-forest==0.5.0
+
+orqviz =
+    orqviz==0.3.0
 
 [flake8]
 ignore = E203,E266,F401,W605
