--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,10 @@ module = [
     'rapidjson',
     'networkx.*',
     'openfermion.*',
-    'qiskit.*'
+    'qiskit.*',
+    'matplotlib.*',
+    'sklearn.*',
+    'mpl_toolkits.*',
 ]
 ignore_missing_imports = true
 
