--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     orquestra-quantum==0.8.0
     orquestra-opt==0.7.0
     orquestra-vqa==0.8.0
+    orquestra-sdk==0.42.0
 
 
 
@@ -40,6 +41,7 @@ dev =
     orquestra-qulacs==0.7.0
     orquestra-cirq==0.8.0
     orquestra-braket==0.3.0
+    orquestra-sdk[all]==0.42.0
     icecream
 
 qulacs =
@@ -56,6 +58,15 @@ braket =
 
 forest =
     orquestra-forest==0.5.0
+
+all =
+    orquestra-opt[all]==0.7.0
+    orquestra-cirq[qsim]==0.8.0
+    orquestra-qiskit==0.8.0
+    orquestra-qulacs==0.7.0
+    orquestra-cirq==0.8.0
+    orquestra-braket==0.3.0
+    orquestra-sdk[all]==0.42.0
 
 [flake8]
 ignore = E203,E266,F401,W605
