fix(.github): require docs tests to pass in PR

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -86,3 +86,9 @@ jobs:
       - uses: ./subtrees/z_quantum_actions/actions/coverage
         env:
           ZAPATA_IBMQ_API_TOKEN: ${{ secrets.ZAPATA_IBMQ_API_TOKEN }}
+
+      - name: Run docs tests
+        shell: bash
+        run: cd docs && make test && cd ..
+        env:
+          ZAPATA_IBMQ_API_TOKEN: ${{ secrets.ZAPATA_IBMQ_API_TOKEN }}
