--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     orquestra-quantum==0.8.0
     orquestra-opt==0.7.0
     orquestra-vqa==0.8.0
+    orquestra-sdk==0.43.0
 
 
 
@@ -40,6 +41,7 @@ dev =
     orquestra-qulacs==0.7.0
     orquestra-cirq==0.8.0
     orquestra-braket==0.3.0
+    orquestra-sdk[all]==0.43.0
     orqviz==0.3.0
     icecream
 
@@ -57,6 +59,16 @@ braket =
 
 forest =
     orquestra-forest==0.5.0
+
+all =
+    orquestra-opt[all]==0.7.0
+    orquestra-cirq[qsim]==0.8.0
+    orquestra-qiskit==0.8.0
+    orquestra-qulacs==0.7.0
+    orquestra-cirq==0.8.0
+    orquestra-braket==0.3.0
+    orquestra-sdk[all]==0.43.0
+    orqviz==0.3.0
 
 orqviz =
     orqviz==0.3.0
